<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/anticipate_interpolator" />

    <Button
        android:id="@+id/buttonAnticipate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/do_magic"
        android:theme="@style/AppTheme.White" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/accelerate_interpolator" />

    <Button
        android:id="@+id/buttonAccelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/do_magic"
        android:theme="@style/AppTheme.White" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/decelerate_interpolator" />

    <Button
        android:id="@+id/buttonDecelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/do_magic"
        android:theme="@style/AppTheme.White" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/accelerate_decelerate_interpolator" />

    <Button
        android:id="@+id/buttonAccelerateDecelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/do_magic"
        android:theme="@style/AppTheme.White" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cycle_interpolator" />

    <Button
        android:id="@+id/buttonCycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/do_magic"
        android:theme="@style/AppTheme.White" />

</LinearLayout>